# mdoc-reader

./: CONFIG_FORMAT.md  Cargo.toml  MSO_REVOCATION_IMPLEMENTATION_PLAN.md  README.md  request.example.json
apps/mdoc-reader/: Cargo.toml
apps/mdoc-reader/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/connection-handover/: Cargo.toml
crates/connection-handover/src/: alternative_carrier.rs  ble_oob_record.rs  connection_handover.rs  connection_handover_types.rs  lib.rs  wifi_aware_record.rs
crates/mdoc-core/: Cargo.toml
crates/mdoc-core/src/: cbor_bytes.rs  cbor_string_map_struct.rs  cbor_web_token.rs  cose_key.rs  cose_mac.rs  cose_sign.rs  device_engagement.rs  device_request.rs  device_response.rs  ident.rs  identifier_list.rs  issuer_data_auth.rs  lib.rs  mdoc_device_auth.rs  mdoc_mac_auth.rs  mobile_security_object.rs  reader_engagement.rs  session_encryption.rs  session_messages.rs  session_transcript.rs  status_list.rs  tagged_cbor_bytes.rs  x5_chain.rs
crates/mdoc-data-retrieval-flow/: Cargo.toml
crates/mdoc-data-retrieval-flow-nfc-ble/: Cargo.toml
crates/mdoc-data-retrieval-flow-nfc-ble/src/: lib.rs
crates/mdoc-data-retrieval-flow-nfc-wifi-aware/: Cargo.toml
crates/mdoc-data-retrieval-flow-nfc-wifi-aware/src/: lib.rs
crates/mdoc-data-retrieval-flow/src/: lib.rs
crates/mdoc-reader-cli/: Cargo.toml
crates/mdoc-reader-cli/src/: main.rs
crates/mdoc-reader-flow/: Cargo.toml
crates/mdoc-reader-flow-nfc-ble/: Cargo.toml
crates/mdoc-reader-flow-nfc-ble/src/: lib.rs  packet_reorder_workaround.rs
crates/mdoc-reader-flow/src/: lib.rs  validation.rs
crates/mdoc-reader-transport/: Cargo.toml
crates/mdoc-reader-transport-ble-winrt/: Cargo.toml
crates/mdoc-reader-transport-ble-winrt/src/: lib.rs
crates/mdoc-reader-transport/src/: lib.rs
crates/mdoc-security/: Cargo.toml  README.md
crates/mdoc-security/src/: certificate_validation.rs  issuer_data_auth.rs  issuer_validation.rs  lib.rs  mdoc_device_auth.rs  mdoc_mac_auth.rs  mso_revocation.rs
crates/mdoc-transport/: Cargo.toml
crates/mdoc-transport-ble-winrt/: Cargo.toml
crates/mdoc-transport/src/: lib.rs
crates/mdoc-ui/: Cargo.toml
crates/mdoc-ui-cli/: Cargo.toml
crates/mdoc-ui-cli/src/: lib.rs
crates/mdoc-ui/src/: lib.rs
crates/mdoc-validation/: Cargo.toml  README.md
crates/mdoc-validation/src/: certificate_validation.rs
crates/mdoc_validation/: README.md
crates/nfc-reader/: Cargo.toml
crates/nfc-reader-pcsc/: Cargo.toml
crates/nfc-reader-pcsc/src/: lib.rs
crates/nfc-reader/src/: lib.rs
crates/tnep/: Cargo.toml
crates/tnep/src/: client.rs  error.rs  lib.rs  record.rs  service.rs
