[workspace]
members = [
    "crates/mdoc-transport",
    "crates/mdoc-data-retrieval-flow",
    "crates/mdoc-data-retrieval-flow-nfc-ble",
    "crates/mdoc-reader-flow",
    "crates/connection-handover",
    "crates/tnep",
    "crates/nfc-reader",
    "crates/nfc-reader-pcsc",
    "crates/mdoc-transport-ble-winrt",
    "crates/mdoc-core",
    "apps/mdoc-reader",
    "crates/mdoc-ui-cli",
    "crates/mdoc-ui",
    "crates/mdoc-security",
]
resolver = "2"
