[package]
name = "mdoc-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
mdoc-core = { path = "../../crates/mdoc-core" }
nfc-reader-pcsc = { path = "../../crates/nfc-reader-pcsc" }
mdoc-transport-ble-winrt = { path = "../../crates/mdoc-transport-ble-winrt" }
mdoc-data-retrieval-flow = { path = "../../crates/mdoc-data-retrieval-flow" }
mdoc-data-retrieval-flow-nfc-ble = { path = "../../crates/mdoc-data-retrieval-flow-nfc-ble" }
mdoc-reader-flow = { path = "../../crates/mdoc-reader-flow" }
mdoc-ui-cli = { path = "../../crates/mdoc-ui-cli" }
mdoc-security = { path = "../../crates/mdoc-security" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["std"] }
log = "0.4"
env_logger = "0.11"
x509-cert = "0.2"
url = "2"
